# nrpycpp

./: .gitignore  Makefile  Makefile.Debug  Makefile.Release  PyQAC.pro  depspath.pri.debian8-64b-python39  depspath.pri.sample  depspath.pri.sample.win10  depspath.pri.ub1604-64b  main.cpp  pyenvironment.cpp  pyenvironment.h  pyrunner.cpp  pyrunner.h
lib/: PyCall.h  PyCallBackIface.h  PyCallback.cpp  PyCallback.h  depspath.pri.sample  depspath.pri.teamcity  nrPyCpp.pro  nrpycpp_wrapper_conf.json  pyenvironment.cpp  pyenvironment.h  pyrunner.cpp  pyrunner.h  sleep_header.h
lib/old_depspaths/: depspath.pri.ub1604-64b
lib/python-ub22.04/: libpython3.10.so.1.0
module/: CMakeLists.txt  NrPyCallbacks.h  NrPyCallbacks.xml  PyCallbacks_test.json  PyCallbacks_test.py  Readme.txt  config.json  deps_qt6.json  pyside_config.py
samples/: PyQAC2.py  PyTest.py  PyTestSample.py
samples/pyPingTest/: PyQAC.py
samples/pyPingTest/myPyLib/: mypylib.py
samples/pyTestSample/: PyTestSample.py
tester/: main.cpp  nrPyCppTester.pro  pycpptester.cpp  pycpptester.h
